--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jasmine": "^2.0.3",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "^0.10.1",
     "jasmine-core": "^2.2.0",
@@ -16,6 +18,7 @@
     "karma-coverage": "^0.3.1",
     "karma-ie-launcher": "^0.1.5",
     "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^1.0.4",
     "load-grunt-tasks": "^0.6.0"
   }
 }
